@@ -1,5 +1,6 @@
 %Document -stretch
 %Document -redact
+%Document ?x0 y0 x1 y1 rectangle specifications
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
